WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280744
JSDOMPromiseDeferred.h:307:20: "error: use 'template' keyword to treat 'resolve' as a dependent template name" with some Clang versions
https://bugs.webkit.org/show_bug.cgi?id=280744
Summary
JSDOMPromiseDeferred.h:307:20: "error: use 'template' keyword to treat 'resol...
Abrar Rahman Protyasha
Reported
2024-10-02 00:41:43 PDT
rdar://136932730
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-10-02 00:53:39 PDT
This is a valid diagnostic, because `m_promise` is indeed a member template specialization and the `resolve()` call explicitly depends on a template parameter, so we must adhere to clause 13.3/3.4 of the current working draft of the C++ standard.
https://eel.is/c++draft/temp#:~:text=The%20keyword%20template%20is%20used%20to%20indicate%20that%20a%20dependent%20qualified%20name%20(%5Btemp.dep.type%5D)%20denotes%20a%20template%20where%20an%20expression%20might%20appear
Abrar Rahman Protyasha
Comment 2
2024-10-02 01:21:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34566
EWS
Comment 3
2024-10-02 08:44:52 PDT
Committed
284560@main
(01c06ea002c2): <
https://commits.webkit.org/284560@main
> Reviewed commits have been landed. Closing PR #34566 and removing active labels.
David Kilzer (:ddkilzer)
Comment 4
2024-11-17 08:24:03 PST
<
rdar://problem/140038002
>
David Kilzer (:ddkilzer)
Comment 5
2024-11-17 08:28:27 PST
<
rdar://136932730
>
EWS
Comment 6
2024-11-17 09:23:50 PST
Committed
283286.486@safari-7620-branch
(c44b1c0fb102): <
https://commits.webkit.org/283286.486@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2294 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug