Cherry-pick 284560@main (01c06ea002c2). https://bugs.webkit.org/show_bug.cgi?id=280744

JSDOMPromiseDeferred.h:307:20: "error: use 'template' keyword to treat 'resolve' as a dependent template name" with some Clang versions
    https://bugs.webkit.org/show_bug.cgi?id=280744
    rdar://136932730

    Reviewed by Darin Adler.

    In some Clang versions, we get the following error diagnostic:

    ```
    JSDOMPromiseDeferred.h:307:20: error: use 'template' keyword to treat 'resolve' as a dependent template name
      307 |         m_promise->resolve<IDLType>(std::forward<typename IDLType::ParameterType>(value));
          |                    ^
          |                    template
    ```

    This is a valid error because `m_promise` is indeed a member template
    specialization and the `resolve()` call explicitly depends on a template
    parameter.

    We fix this by prepending the `resolve()` call with keyword `template`.

    c.f. ISO C++23 13.3.3.4.

    * Source/WebCore/bindings/js/JSDOMPromiseDeferred.h:
    (WebCore::DOMPromiseDeferred::resolve):

    Canonical link: https://commits.webkit.org/284560@main

Canonical link: https://commits.webkit.org/282416.181@webkitglib/2.46